feat: 예제 7.14 리펙토링 과정 change signature / introduce parameter