@@ -3,7 +3,6 @@ package com.example.travelator.actiontocalculation.version3;
 
 import java.time.Instant;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static com.example.travelator.actiontocalculation.version3.Trip.BookingStatus.BOOKED;
 
@@ -18,11 +17,11 @@ public class Tracking implements ITrackTrips {
 	@Override
 	public Optional<Trip> currentTripFor(String customerId, Instant at) {
 		var candidates = trips.currentTripsFor(customerId, at).stream() // 사용자 ID 로 현재 여행을 찾는다.
-			.filter((trip) -> trip.getBookingStatus() == BOOKED) // 예약된 여행만 선택한다.
-			.collect(Collectors.toList());
+			.filter(trip -> trip.getBookingStatus() == BOOKED) // 예약된 여행만 선택한다.
+			.toList();
 		if (candidates.size() == 1) {
 			return Optional.of(candidates.get(0));
-		} else if (candidates.size() == 0) {
+		} else if (candidates.isEmpty()) {
 			return Optional.empty();
 		} else {
 			throw new IllegalStateException("Unexpected more than one current trip for " + customerId);
